[gd_scene load_steps=28 format=3 uid="uid://c0d64eo7alrkl"]

[ext_resource type="Script" path="res://scripts/bobber.gd" id="1_j2i6i"]
[ext_resource type="PackedScene" uid="uid://r747d7jkfvjn" path="res://assets/starter_bobber.glb" id="1_n8o6b"]
[ext_resource type="Texture2D" uid="uid://ciiaes1sjum8q" path="res://water/water_splash_low_res.png" id="3_0n2dw"]
[ext_resource type="Texture2D" uid="uid://401x3v8w53uy" path="res://water/white_mist.png" id="3_8nr7j"]
[ext_resource type="Texture2D" uid="uid://brt885buvij8u" path="res://water/water_splash_4.png" id="5_o05xd"]
[ext_resource type="AudioStream" uid="uid://7oqqmmial1qs" path="res://sounds/DROP_LURE2.WAV" id="6_wf1gc"]
[ext_resource type="Texture2D" uid="uid://dxf7v6aff658r" path="res://water/exclamation_point.png" id="7_wrlre"]
[ext_resource type="AudioStream" uid="uid://bs45tef8j0m82" path="res://sounds/Stardew Valleyï¼š Fish Bite! Sound Effect.mp3" id="8_s5eq1"]
[ext_resource type="AudioStream" uid="uid://dwimyasqc8282" path="res://sounds/Sample_0040.wav" id="9_0dtpi"]

[sub_resource type="SphereShape3D" id="SphereShape3D_7gh21"]
radius = 0.402143

[sub_resource type="Animation" id="Animation_iduwj"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("starter_bobber:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("starter_bobber:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-0.710266, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("starter_bobber:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_t8ma2"]
resource_name = "bob"
length = 2.6
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("starter_bobber:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.2, 2.6)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("starter_bobber:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(-0.710266, -0.25, 0, 0.25, 0, -0.8, -0.25, 0, 0.25, 0, -0.710266, -0.25, 0, 0.25, 0, -0.76, -0.25, 0, 0.25, 0, -0.710266, -0.25, 0, 0.25, 0, -0.73, -0.25, 0, 0.25, 0, -0.710266, -0.25, 0, 0.25, 0, -0.72, -0.25, 0, 0.25, 0, -0.710266, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.2, 2.6)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("starter_bobber:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.2, 2.6)
}

[sub_resource type="Animation" id="Animation_lgr1n"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("starter_bobber:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("starter_bobber:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-0.710266, -0.25, 0, 0.25, 0, -0.76, -0.25, 0, 0.25, 0, -0.710266, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("starter_bobber:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 2)
}

[sub_resource type="Animation" id="Animation_kjjjq"]
resource_name = "landing"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("starter_bobber:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.7, 1.1, 1.6, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("starter_bobber:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(-0.85, -0.25, 0, 0.25, 0, -0.710266, -0.25, 0, 0.25, 0, -0.78, -0.25, 0, 0.25, 0, -0.710266, -0.25, 0, 0.25, 0, -0.75, -0.25, 0, 0.25, 0, -0.710266, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.7, 1.1, 1.6, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("starter_bobber:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.7, 1.1, 1.6, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2s51s"]
_data = {
"RESET": SubResource("Animation_iduwj"),
"bob": SubResource("Animation_t8ma2"),
"idle": SubResource("Animation_lgr1n"),
"landing": SubResource("Animation_kjjjq")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fo6nj"]
radius = 0.298652
height = 0.804946

[sub_resource type="Animation" id="Animation_5wlhb"]
resource_name = "Mist"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.4, 0.4, 0.4), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yjcn2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.4, 0.4, 0.4)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nwc0a"]
_data = {
"Mist": SubResource("Animation_5wlhb"),
"RESET": SubResource("Animation_yjcn2")
}

[sub_resource type="Animation" id="Animation_o2egt"]
resource_name = "Fade"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_j5ok1"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_asvel"]
_data = {
"Fade": SubResource("Animation_o2egt"),
"RESET": SubResource("Animation_j5ok1")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r6r2l"]
render_priority = 1
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
albedo_texture = ExtResource("5_o05xd")
albedo_texture_force_srgb = true
roughness = 0.93
emission_enabled = true
emission = Color(0, 0.219608, 0.239216, 1)

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_ul5s7"]
material = SubResource("StandardMaterial3D_r6r2l")

[sub_resource type="Gradient" id="Gradient_u81kh"]
offsets = PackedFloat32Array(0, 0.893617)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1f477"]
transparency = 1
cull_mode = 2
shading_mode = 0
albedo_texture = ExtResource("7_wrlre")
albedo_texture_force_srgb = true
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_101cr"]
material = SubResource("StandardMaterial3D_1f477")
shape = 0
size = 2.0
sections = 10

[node name="Bobber" type="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.476763, 0)
collision_layer = 0
mass = 40.0
gravity_scale = 1.5
max_contacts_reported = 1
contact_monitor = true
lock_rotation = true
script = ExtResource("1_j2i6i")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.536167, 0)
shape = SubResource("SphereShape3D_7gh21")

[node name="starter_bobber" parent="." instance=ExtResource("1_n8o6b")]
unique_name_in_owner = true
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, -0.710266, 0)

[node name="BobberAnimationPlayer" type="AnimationPlayer" parent="starter_bobber"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_2s51s")
}

[node name="Area3d" type="Area3D" parent="."]
transform = Transform3D(1.25558, 0, 0, 0, 1.25886, 0, 0, 0, 1.37576, 0, 0.133062, 0)

[node name="CollisionShape3d" type="CollisionShape3D" parent="Area3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.575329, 0)
shape = SubResource("CapsuleShape3D_fo6nj")

[node name="Water_mist" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, -0.451735, 0)
transparency = 0.52
offset = Vector2(0, 150)
flip_v = true
billboard = 2
render_priority = 1
texture = ExtResource("3_8nr7j")

[node name="WaterMistPlayer" type="AnimationPlayer" parent="Water_mist"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_nwc0a")
}

[node name="Water_foam" type="Sprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.5, 0, 0, 0, -2.18557e-08, 0.5, 0, -0.5, -2.18557e-08, 0.0651552, -0.529194, -0.0557927)
transparency = 0.08
shaded = true
render_priority = 1
texture = ExtResource("3_0n2dw")

[node name="WaterFoamPlayer" type="AnimationPlayer" parent="Water_foam"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_asvel")
}

[node name="WaterSplashEmitter" type="CPUParticles3D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
mesh = SubResource("RibbonTrailMesh_ul5s7")
direction = Vector3(0, 1, 0)
spread = 90.0
flatness = 0.42
gravity = Vector3(0, -13, 0)
initial_velocity_min = 5.0
initial_velocity_max = 5.0
color_ramp = SubResource("Gradient_u81kh")

[node name="SplashSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_wf1gc")
unit_db = -5.0

[node name="ExclamationEmitter" type="CPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.570391, 0)
emitting = false
amount = 1
lifetime = 1.6
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
mesh = SubResource("RibbonTrailMesh_101cr")
direction = Vector3(0, 1, 0)
spread = 40.11
flatness = 0.88
gravity = Vector3(0, -1, 0)
initial_velocity_min = 2.0
initial_velocity_max = 2.0
angular_velocity_min = -20.0
angular_velocity_max = -20.0
damping_min = 0.5
damping_max = 1.0
angle_min = 23.5
angle_max = 23.5
scale_amount_max = 1.2

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="BiteSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_s5eq1")
volume_db = -10.0

[node name="HitWindowTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="CatchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_0dtpi")

[node name="FishViewCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53671, 0)

[connection signal="animation_finished" from="starter_bobber/BobberAnimationPlayer" to="." method="_on_bobber_animation_player_animation_finished"]
[connection signal="body_entered" from="Area3d" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="HitWindowTimer" to="." method="_on_hit_window_timer_timeout"]
